--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <div id="total">Total Ammount is 0 $</div>
   </main>
 	<footer></footer>
+	<script src="./index.js"></script>
 </body>
 
 </html>
