--- a/main.html
+++ b/main.html
@@ -8,22 +8,29 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<label for="item-name-input">Item Name:</label>
 	<input type="text" id="item-name-input" aria-label="Enter item name">
+	<br>
+	<label for="item-price-input">Item Price:</label>
 	<input type="number" id="item-price-input" aria-label="Enter item price">
-	<!-- Add button -->
-	<button id="add" aria-label="Add item">Add</button>
-	<!-- Table to display shopping list -->
-	<table id="shopping-list" aria-role="table">
-		<!-- Initial row with grand total of 0 -->
-		<tr>
-			<th id="item">Item</th>
-			<th id="price">Price</th>
-		</tr>
-		<tr>
-			<td>Grand Total</td>
-			<td id="total">0</td>
-		</tr>
+	<br>
+	<button id="add" aria-label="Add item to list">Add</button>
+
+	<table id="shopping-list">
+		<thead>
+			<tr>
+				<th id="item">Item</th>
+				<th id="price">Price</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td colspan="2">Grand Total:</td>
+				<td id="total">0</td>
+			</tr>
+		</tbody>
 	</table>
+
 	<script type="text/javascript" src="./script.js">
 	</script>
 
