--- a/main.html
+++ b/main.html
@@ -8,28 +8,29 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<label for="item-name-input">Item Name:</label>
-	<input type="text" id="item-name-input" aria-label="Enter item name">
-	<br>
-	<label for="item-price-input">Item Price:</label>
-	<input type="number" id="item-price-input" aria-label="Enter item price">
-	<br>
-	<button id="add" aria-label="Add item to list">Add</button>
-
-	<table id="shopping-list">
-		<thead>
+	<header id="heading">
+		Shopping List Calculator
+	</header>
+	<main onload="render()">
+		<table id="table1">
+			<caption></caption>
 			<tr>
-				<th id="item">Item</th>
-				<th id="price">Price</th>
+				<th>Item Name</th>
+				<th>Quantity</th>
+				<th>Price</th>
+				<th>Total</th>
 			</tr>
-		</thead>
-		<tbody>
 			<tr>
-				<td colspan="2">Grand Total:</td>
-				<td id="total">0</td>
+				<form id="myinputs">
+					<td><input type="text" id="item-name-input" placeholder="Name"></td>
+					<td><input type="text" id="item-price-input" placeholder="Price"></td>
+				</form>
+				<td><button id="add" onclick="addData();">Add</button></td>
 			</tr>
-		</tbody>
-	</table>
+		</table>
+		<div id="total">Total Ammount is 0 $</div>
+	</main>
+	<footer></footer>
 
 	<script type="text/javascript" src="./script.js">
 	</script>
